--- a/README
+++ b/README
@@ -1,16 +1,19 @@
 Este repositório armazena os códigos usados nos estudos sobre Kuberentes. Nesses estudos foi seguido o material do curso da Alura Kuberentes: Pods, Services e ConfigMaps (link 1).
 O cursos consiste em ciar uma aplicação web de um portal de notícias usando Kubernetes e containers com imagens prontas.
 
-Durante o curso foi feito:
-
-1 - Criação de um cluter local com minikube
-2 - Criação de Pods e Serviços 
-3 - Criação e uso de ConfigMaps
+* Durante o curso foi feito:
+  
+  1 - Criação de um cluter local com minikube
+  2 - Criação de Pods e Serviços 
+  3 - Criação e uso de ConfigMaps
 
 O material escrito durante o curso está no drive (link 2)
 
+* Organização 
+
+Os arquivos de configuração (yaml) forão separados em pastas para melhor organização e entendimento no mommento de aplicar os pods, serviços e configmaps.
+
 Links:
 
-1 - Alura Kuberentes: Pods, Services e ConfigMaps - https://cursos.alura.com.br/course/kubernetes-pods-services-configmap
-
-2 - Drive do material - https://drive.google.com/drive/folders/16jvZa5dNcxrJcW16x8k-GD3us1UREuDd?usp=sharing
+  1 - Alura Kuberentes: Pods, Services e ConfigMaps - https://cursos.alura.com.br/course/kubernetes-pods-services-configmap
+  2 - Drive do material - https://drive.google.com/drive/folders/16jvZa5dNcxrJcW16x8k-GD3us1UREuDd?usp=sharing
